Key changes include: - Removed initial sample App, Greeting classes, and compose-multiplatform drawable. - Added `Constant.kt` in `core/presentation` for global constants. - Implemented `HttpClientExt.kt` and `HttpClientFactory.kt` in `core/data` for network request handling. - Introduced `LoginScreen.kt` and `LoginViewModel.kt` in `feature/auth` for the login feature. - Added `Result.kt` in `core/domain` to handle API response states. - Defined navigation `Routes.kt` in `composeApp/src/commonMain/kotlin/com/hasan/dnb/app`. - Created SplashScreen functionality with `SplashScreen.kt`, `SplashScreenAction.kt`, `SplashScreenState.kt`, and `SplashViewModel.kt`. - Added string resources for English and Bengali. - Implemented `UiText.kt` in `core/presentation` for handling UI text. - Updated platform-specific Ktor engine configurations in `Platform.kt` files. - Added `sharedModule` for Koin dependency injection. - Created `di` module for dependency injection setup. - Added `Theme.kt` and `Colors.kt` in `composeApp/src/commonMain/kotlin/com/hasan/dnb/theme` for app theming. - Renamed `feature/login` module to `feature/auth`. - Updated `settings.gradle.kts` to include new modules. - Implemented basic app navigation in `composeApp/src/commonMain/kotlin/com/hasan/dnb/app/App.kt`. - Updated `MainActivity.kt`, `MainViewController.kt`, and `main.kt` to use the new App composable. - Added new drawables (`dnb_logo.png`) and fonts (`kalpurush.ttf`, `kalpurush_ansi.ttf`). - Updated `gradle/libs.versions.toml` with new dependencies. - Updated `build.gradle.kts` files for various modules with new dependencies and configurations.