@@ -1,16 +1,13 @@
-import com.android.aaptcompiler.resolvePackage
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
 import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
 plugins {
     alias(libs.plugins.kotlinMultiplatform)
-    alias(libs.plugins.androidApplication)
+    alias(libs.plugins.androidLibrary)
     alias(libs.plugins.composeMultiplatform)
     alias(libs.plugins.composeCompiler)
     alias(libs.plugins.composeHotReload)
-    alias(libs.plugins.multiplatformResource)
-    alias(libs.plugins.jetbrains.kotlin.serialization)
 }
 
 kotlin {
@@ -29,18 +26,17 @@ kotlin {
         iosTarget.binaries.framework {
             baseName = "ComposeApp"
             isStatic = true
-            // Add these export lines:
-            export("dev.icerock.moko:resources:0.24.0")
-           // export("dev.icerock.moko:resources-compose-bridge:0.24.0")
         }
     }
-    
+
     jvm()
-    
+
     sourceSets {
         androidMain.dependencies {
             implementation(compose.preview)
             implementation(libs.androidx.activity.compose)
+            implementation(libs.koin.android)
+            implementation(libs.koin.androidx.compose)
             implementation(libs.ktor.client.okhttp)
         }
         commonMain.dependencies {
@@ -57,25 +53,6 @@ kotlin {
             implementation(libs.koin.compose)
             implementation(libs.koin.compose.viewmodel)
 
-            implementation(libs.coil.network.ktor3)
-            implementation(libs.ktor.client.core)
-            //implementation(libs.ktor.client.okhttp)
-            implementation(libs.ktor.client.logging)
-            implementation(libs.ktor.client.content.negotiation)
-            implementation(libs.ktor.serialization.kotlinx.json)
-
-            implementation(libs.moko.resource)
-            implementation(libs.moko.resource.compose)
-
-            implementation(libs.jetbrains.compose.navigation)
-            implementation(libs.matrial3.extended.icon)
-            implementation(libs.kotlinx.serialization.json)
-
-            implementation(project(":core:data"))
-            implementation(project(":core:domain"))
-            implementation(project(":core:presentation"))
-            implementation(project(":feature:auth"))
-
         }
         commonTest.dependencies {
             implementation(libs.kotlin.test)
@@ -87,21 +64,17 @@ kotlin {
         }
         iosMain.dependencies {
             implementation(libs.ktor.client.darwin)
-            implementation(libs.moko.resource.compose)
         }
     }
 }
 
 android {
-    namespace = "com.hasan.dnb"
+    namespace = "com.hasan.dnb.core.di"
     compileSdk = libs.versions.android.compileSdk.get().toInt()
 
     defaultConfig {
-        applicationId = "com.hasan.dnb"
         minSdk = libs.versions.android.minSdk.get().toInt()
         targetSdk = libs.versions.android.targetSdk.get().toInt()
-        versionCode = 1
-        versionName = "1.0"
     }
     packaging {
         resources {
@@ -123,21 +96,12 @@ dependencies {
     debugImplementation(compose.uiTooling)
 }
 
-
 compose.desktop {
     application {
-        mainClass = "com.hasan.dnb.MainKt"
-
-        tasks.withType<JavaExec> {
-            jvmArgs = listOf(
-                "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
-                "--add-opens=java.base/java.util=ALL-UNNAMED"
-            )
-        }
 
         nativeDistributions {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
-            packageName = "com.hasan.dnb"
+            packageName = "com.hasan.dnb.core.di"
             packageVersion = "1.0.0"
         }
     }
